#Files to compile
sources = files (
    'Main.vala',
    'Application.vala',

    'Widgets/Window.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/ValidateScreen.vala',
    'Widgets/MainScreen.vala',
    'Widgets/SecretBox.vala',

    'Widgets/Dialogs/NewSecret.vala',
    'Widgets/Dialogs/EditSecret.vala',
    'Widgets/Dialogs/ChangeCipher.vala',
    'Widgets/Dialogs/Preferences.vala',

    'Helpers/SecretManager.vala',
    'Helpers/CipherManager.vala',
    'Helpers/PasswordGenerator.vala'
)
